--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,20 @@ img {
 
 .app__toolbar{
     background-color: #222222 ;
+    display: flex;
+    flex-direction: row;
+}
+.action-container{
+    color: white;
+    font-size: 24px;
+    position: relative;
+}
+.position-right{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    
 }
 
 .debug .app__content,
