--- a/css/style.css
+++ b/css/style.css
@@ -32,19 +32,19 @@ img {
     background-color: #222222 ;
     display: flex;
     flex-direction: row;
+    /* justify-content: center; */
+}
+.app__toolbar__list-action{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 .action-container{
     color: white;
     font-size: 24px;
-    position: relative;
+   
 }
-.position-right{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    
-}
+
 
 .debug .app__content,
 .debug .app__toolbar {
