--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,17 @@ img {
 }
 .action-container{
     color: white;
-    font-size: 24px;
+    padding: 0 10px;
    
 }
 
+/* icone  */
+.icon{
+   font-size: 24px; 
+}
+.icon-small {
+    font-size: 10px;
+}
 
 .debug .app__content,
 .debug .app__toolbar {
