--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,10 @@ img {
     background-color: #222222 ;
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+
 }
 .app__toolbar__list-action{
     display: flex;
@@ -44,7 +47,19 @@ img {
     padding: 0 10px;
    
 }
+.action-text {
+    
+}
+.flex-grow-max{
+    flex-grow: 2;
+}
 
+.end-call{
+    color: red;
+    background-color: #4a4a4a;
+    line-height: 80px;
+    
+}
 /* icone  */
 .icon{
    font-size: 24px; 
@@ -55,6 +70,6 @@ img {
 
 .debug .app__content,
 .debug .app__toolbar {
-    padding: 20px;
-    border: 2px solid black;
+    /* padding: 20px;
+    border: 2px solid black; */
 }
