--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,15 @@ img {
     flex-grow: 1;
     overflow: hidden;
 }
-
+/* MAIN CONTENT  */
+.cam-container{
+    width: 300px;
+    height: 200px;
+    padding: 5px;
+   
+    
+}
+/* TOOLBAR  */
 .app__toolbar{
     background-color: #222222 ;
     display: flex;
