--- a/css/style.css
+++ b/css/style.css
@@ -19,21 +19,40 @@ img {
 #app {
     height: 100vh;
     overflow: hidden;
-    background-color: greenyellow;
+    background-color: black;
     display: flex;
     flex-direction: column;
 }
 .app__content{
     flex-grow: 1;
     overflow: hidden;
+    width: 1600px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+   
 }
 /* MAIN CONTENT  */
+
 .cam-container{
     width: 300px;
     height: 200px;
     padding: 5px;
-   
+    position: relative;
     
+}
+.cam-container img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.status {
+    color: white;
+    background-color: rgb(0, 0, 0, 0.4);
+    margin: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    line-height: 30px;
 }
 /* TOOLBAR  */
 .app__toolbar{
