--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,30 @@ img {
     left: 0;
     line-height: 30px;
 }
+
+/* bottoni  */
+
+.button-list {
+    position: fixed ;
+    top: 10px;
+    right: 10px;
+    z-index: 1;
+    border-radius: 10px;
+    color: white;
+    
+}
+.button-speaker-view{
+    padding: 5px;
+    background-color: gray;
+    margin-right: 20px;
+    border-radius: 10px;
+}
+.button-scale-back {
+    padding: 5px;
+    background-color: gray;
+    border-radius: 10px;
+    
+}
 /* TOOLBAR  */
 .app__toolbar{
     background-color: #222222 ;
@@ -62,6 +86,7 @@ img {
     justify-content: space-between;
     align-items: center;
     height: 80px;
+    text-align: center;
 
 }
 .app__toolbar__list-action{
@@ -96,8 +121,4 @@ img {
     font-size: 10px;
 }
 
-.debug .app__content,
-.debug .app__toolbar {
-    /* padding: 20px;
-    border: 2px solid black; */
-}
+
