--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img {
 .app__content{
     flex-grow: 1;
     overflow: hidden;
-    width: 1600px;
+    /* width: 1600px; */
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -83,12 +83,13 @@ img {
 }
 /* TOOLBAR  */
 .app__toolbar{
+    flex-shrink: 0;
     background-color: #222222 ;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    /* height: 80px;  */
     text-align: center;
 
 }
@@ -99,7 +100,7 @@ img {
 }
 .action-container{
     color: white;
-    padding: 0 10px;
+    padding:  16px;
    
 }
 .action-text {
@@ -112,8 +113,8 @@ img {
 .end-call{
     color: red;
     background-color: #4a4a4a;
-    line-height: 80px;
-    padding: 0 20px;
+    /* line-height: 80px; */
+    padding: 30px 20px;
     
 }
 /* icone  */
