--- a/css/style.css
+++ b/css/style.css
@@ -38,15 +38,18 @@ img {
 /* MAIN CONTENT  */
 
 .cam-container{
-    width: 300px;
-    height: 200px;
+    /* width: 300px;
+    height: 200px; */
     padding: 5px;
     position: relative;
-    
+    width: calc(100% / 5);
 }
 .cam-container img {
-    max-width: 100%;
-    max-height: 100%;
+    /* max-width: 100%;
+    max-height: 100%; */
+    aspect-ratio: 16/9;
+    display: block;
+    object-fit: cover;
 }
 .status {
     color: white;
